height issue on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
     margin:0;
     background-color:#dddddd;
     padding:0;
+    height: 100%;
 }
 
 .jumbotron .h1, .jumbotron h1 {
@@ -12,7 +13,6 @@ h3 {
     font-size: 1.2em;
 }
 #presentation_column {
-    display:flex;
     width: 80%;
     height: 100%;
     background-color:#fff;
@@ -22,7 +22,6 @@ h3 {
 }
 .position_text_box {
     position: relative;
-    height: 
 }
 .display_position_text {
     color: #AAA;
